--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -19,3 +19,13 @@
     padding: 5px 20px;
     width: 100%;
   }
+  .chart-container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .charts {
+    width: 100%;
+    height: 100%;
+  }
