--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,31 +1,69 @@
 @import './variables.scss';
 
 .main {
-    background-color: $main-bg;
-    color: $white-color
-  }
-  
-  .container {
+  background-color: $main-bg;
+  color: $white-color
+}
+
+.container {
+  display: flex;
+}
+
+.side-menu-container {
+  width: 250px;
+  padding: 5px 20px;
+  border-right: 2px solid $primary-bg;
+}
+
+.content-container {
+  padding: 5px 20px 50px;
+  width: 100%;
+}
+
+.chart-container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.charts {
+  width: 100%;
+  height: 100%;
+}
+.green{
+  color: $light-green;
+}
+.purple{
+  color:$purple;
+}
+.light-purple {
+  color: $light-purple;
+}
+.blue{
+  color: $blue;
+}
+.totalBlocks {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+  .icon {
+    height: 45px;
+    width: 45px;
+    padding: 13px;
+    border: 1px solid #969696;
+    border-radius: 50%;
     display: flex;
+    align-items: center;
+    justify-content: center;
+
+    svg {
+      font-size: 37px;
+    }
   }
-  
-  .side-menu-container {
-    width: 250px;
-    padding: 5px 20px;
-    border-right: 2px solid $primary-bg;
+
+  p {
+    font-size: 22px;
   }
-  
-  .content-container {
-    padding: 5px 20px;
-    width: 100%;
-  }
-  .chart-container {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-  .charts {
-    width: 100%;
-    height: 100%;
-  }
+}
