add new color vars

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,3 +4,7 @@ $dark-bg: #222b3c;
 $white-color:#FFF;
 $primary-color:#ddd;
 $dark-color:#2a3447;
+$light-green:#82ca9d;
+$purple:#413ea0;
+$light-purple:#8884d8;
+$blue:#438afb;
