add new color vars

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,6 +5,6 @@ $white-color:#FFF;
 $primary-color:#ddd;
 $dark-color:#2a3447;
 $light-green:#82ca9d;
-$purple:#413ea0;
+$purple:#70348c;
 $light-purple:#8884d8;
 $blue:#438afb;
