--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,9 +1,8 @@
 @import './variables.scss';
 
-.main {
+body {
   background-color: $main-bg;
   color: $white-color;
-  height: 100vh;
 }
 
 .container {
