add active class for the menu item

--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -25,4 +25,8 @@
             background-color: $primary-bg;
         }
     }
+    .active {
+        color: white;
+        background-color: #65659c;
+       }
 }
